Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/AB_Agent_Metric__c.object-meta.xml
<CustomObject>
    <description>object to collect metrics coming from appointment booking agent</description>
    <label>AB Agent Metric</label>
    <nameField>
        <label>AB Agent Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AB Agent Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>