Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AB Agent Metrics</relationshipLabel>
    <relationshipName>AB_Agent_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>