Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/Returned_Slots__c.field-meta.xml
<CustomField>
    <fullName>Returned_Slots__c</fullName>
    <label>Returned Slots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>