Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/SA_Grade__c.field-meta.xml
<CustomField>
    <fullName>SA_Grade__c</fullName>
    <label>SA Grade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>