Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/SA_Id__c.field-meta.xml
<CustomField>
    <fullName>SA_Id__c</fullName>
    <label>SA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>