Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/SA_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Number__c</fullName>
    <label>SA Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>