Agentforce Appointment Booking/force-app/main/default/objects/AB_Agent_Metric__c/fields/Schedule_Success__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Success</label>
    <type>Checkbox</type>
</CustomField>